# libzram

./: README.md  meson.build
.github/workflows/: ci.yml
include/: libzram.h
src/: libzram.c
tests/: zram_test.py
